# VulkanRenderer

./: .gitignore  CMakeLists.txt  README.md
Dependencies/glfw-3.3.2/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Dependencies/glfw-3.3.2/docs/: Doxyfile.in  input.dox
Dependencies/glfw-3.3.2/docs/html/: input_guide.html
Dependencies/glfw-3.3.2/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  heightmap.c  offscreen  particles  sharing  simple  splitview  wave
Dependencies/glfw-3.3.2/src/: Makefile  cmake_install.cmake  input.c  x11_platform.h
Dependencies/glfw-3.3.2/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
src/: CMakeLists.txt  VulkanDebug.h  VulkanGui.h  VulkanHelpers.h  VulkanStructures.h  main.cpp
src/AutoShader/: AutoShaders.cpp  Main.cpp
src/AutoShaders/: AutoShaders.h
src/FileManagers/: FileLoader.h
src/FileManagers/Bitmap/: Bitmap.cpp  Bitmap.h
src/MemoryManagement/: AllocationBlock.h  IMemoryAllocator.h  MemoryAllocationHelpers.h  PassThroughAllocator.cpp  PassThroughAllocator.h  VMA.cpp  VMA.h  VideoMemoryAllocator.cpp  VideoMemoryAllocator.h
src/Models/: DamagedHelmet.cpp  DamagedHelmet.h  Human.cpp  Human.h  Model.h  ObjectLoader.cpp  ObjectLoader.h
src/Models/DamagedHelmet/: DamagedHelmet.mtl
src/Models/Human/Head/: Head.mtl
src/Refactoring/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandBufferUtils.cpp  CommandBufferUtils.h  CreateInfoHelpers.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  HostDeviceTransfer.cpp  HostDeviceTransfer.h  PhysicalDeviceInfo.h  PresentationEngineInfo.h  Queue.cpp  Queue.h  QueueFamilies.h  RenderFrame.h  VulkanCreateFunctions.h  VulkanSetup.cpp  VulkanSetup.h
src/Refactoring/Texture2D/: Image2D.cpp  Image2D.h  ImageView2D.cpp  ImageView2D.h
src/Resources/: ResourcesManager.cpp  ResourcesManager.h
src/Shaders/: FragmentShader.frag  VertexShader.vert  compileShaders.sh  frag.spv  geometry.spv  tessControl.spv  tessControlShader.tesc  tessEval.spv  tessEvaluationShader.tese  vert.spv  vulkanBase.frag
src/Shaders/Diffuse/: Diffuse.frag  Diffuse.vert
src/Shaders/HumanSkin/: HumanSkin.frag  HumanSkin.vert
src/Shaders/PBR/: PBR.frag  PBR.vert
src/Shaders/UnlitTexture/: UnlitTexture.frag  UnlitTexture.vert
src/Shaders/VulkanBase/: vulkanBase.frag  vulkanBase.geom  vulkanBase.vert
src/Textures/: Texture.cpp  Texture.h
src/VertexAttributes/: PnuVertexInput.cpp  PnuVertexInput.h
